--- a/report/src/system-measurement-project.tex
+++ b/report/src/system-measurement-project.tex
@@ -17,6 +17,7 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{rotating}
+\usepackage{amssymb}
 \geometry{
 	hmargin=2.5cm,
 	vmargin=2.5cm
