contentionPartitionImage.png pushed and added into the report
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/experiments-filesystem.tex
+++ b/report/src/experiments-filesystem.tex
@@ -297,6 +297,19 @@ Operation & Hardware cost & Software cost & Prediction & Measured \\
 \caption{Contention\label{tab:contention}}
 \end{table}
 
+
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[scale=0.8]{contentionPartitionImage}
+\end{center}
+\caption {Contention Partition\label{fig:contention-partition}}
+
+\end{figure}
+
+
+
+
 According to the result shown in \ref{tab:contention}, we
 
 \paragraph{Success of Methodology}
