RAM part of the tables added into the summary table.
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/summary-table.tex
+++ b/report/src/summary-table.tex
@@ -1,6 +1,5 @@
 \subsection{Summary table}
 
-\paragraph{Summary}
 
 \begin{table}[h]
 \begin{center}
@@ -36,9 +35,38 @@ thread context switch 	& 200 cycles		&	1500000 cycles	&1500000 cycles	& 1895295.
 pipe overhead			& 200 cycles		&	30000 cycles	&30000 cycles	& 45275.283 cycles \\ 
 \hline\hline
 
+512B array	&	4 cycles	&	0 cycle		&	4 cycles	&3.895 cycles	\\ \hline
+1KB array	&	4 cycles	&	0 cycle		&	4 cycles	&3.886 cycles		\\ \hline
+2KB array	&	4 cycles	&	0 cycle		&	4 cycles	&3.885 cycles		\\ \hline
+4KB array	&	4 cycles	&	0 cycle		&	4 cycles	&3.886 cycles		\\ \hline
+8KB array	&	4 cycles	&	0 cycle		&	4 cycles	&3.886 cycles		\\ \hline
+16KB	array	&	4 cycles	&	0 cycle		&	4 cycles	&3.888 cycles		\\ \hline
+32KB array	&	4 cycles	&	0 cycle		&	4 cycles	&3.891 cycles		\\ \hline
+64KB 	array	&	12 cycles	&	0 cycle		&	12 cycles	&5.949 cycles		\\ \hline
+128KB array	&	12 cycles	&	0 cycle		&	12 cycles	&5.945 cycles		\\ \hline
+256KB array	&	12 cycles	&	0 cycle		&	12 cycles	&6.209 cycles		\\ \hline
+512KB array	&	28 cycles	&	0 cycle		&	28 cycles	&10.314 cycles		\\ \hline
+1MB array	&	28 cycles	&	0 cycle		&	28 cycles	&10.399 cycles		\\ \hline
+2MB array	&	28 cycles	&	0 cycle		&	28 cycles	&10.757 cycles		\\ \hline
+4MB array	&	28 cycles	&	0 cycle		&	28 cycles	&15.585 cycles		\\ \hline
+8MB array	&	45 cycles	&	0 cycle		&	45 cycles	&30.265 cycles		\\ \hline
+16MB array	&	45 cycles	&	0 cycle		&	45 cycles	&37.458 cycles		\\ \hline
+32MB array	&	45 cycles	&	0 cycle		&	45 cycles	&37.686 cycles		\\ \hline
+64MB array	&	45 cycles	&	0 cycle		&	45 cycles	&37.092 cycles		\\ \hline
+128MB array&	45 cycles	&	0 cycle		&	45 cycles	&37.619 cycles		\\ \hline \hline
 
 
 
+
+
+RAM Read 128MB 	& 10000 MB/s	& 0 MB/s	& 10000 MB/s	& 9711.66 MB/s \\
+\hline
+RAM Write 128MB & 8000 MB/s	& 0 MB/s	& 8000 MB/s	& 7575.58 MB/s \\
+\hline \hline
+
+Page fault	& 18.7 ms	& 81.3 ms 	& 100 ms	& 238 ms\\ \hline
+Page fault	& 18.7 ms	& 81.3 ms 	& 100 ms	& 498 ms\\ \hline
+Page fault	& 18.7 ms	& 81.3 ms 	& 100 ms	& 8 ms\\ \hline \hline
 
 
 
