--- a/report/src/summary-table.tex
+++ b/report/src/summary-table.tex
@@ -33,7 +33,19 @@ process context switch 	& 200 cycles		&	2000000 cycles	&2000000 cycles	& 2010805
 thread context switch 	& 200 cycles		&	1500000 cycles	&1500000 cycles	& 1895295.586 cycles \\ 
 \hline
 pipe overhead			& 200 cycles		&	30000 cycles	&30000 cycles	& 45275.283 cycles \\ 
-\hline\hline
+\hline
+
+\end{tabular}
+\end{center}
+
+\caption{Summary table: CPU operations}
+
+\end{table}
+
+\begin{table}[h]
+\begin{center}
+\begin{tabular}{| l | r | r | r | r |} \hline
+Operation 			& Hardware cost 	& Software cost 	& Prediction	& Measured \\ \hline
 
 512B array	&	4 cycles	&	0 cycle		&	4 cycles	&3.895 cycles	\\ \hline
 1KB array	&	4 cycles	&	0 cycle		&	4 cycles	&3.886 cycles		\\ \hline
@@ -59,6 +71,9 @@ pipe overhead			& 200 cycles		&	30000 cycles	&30000 cycles	& 45275.283 cycles \\
 
 
 
+
+
+
 RAM Read 128MB 	& 10000 MB/s	& 0 MB/s	& 10000 MB/s	& 9711.66 MB/s \\
 \hline
 RAM Write 128MB & 8000 MB/s	& 0 MB/s	& 8000 MB/s	& 7575.58 MB/s \\
@@ -66,30 +81,94 @@ RAM Write 128MB & 8000 MB/s	& 0 MB/s	& 8000 MB/s	& 7575.58 MB/s \\
 
 Page fault	& 18.7 ms	& 81.3 ms 	& 100 ms	& 238 ms\\ \hline
 Page fault	& 18.7 ms	& 81.3 ms 	& 100 ms	& 498 ms\\ \hline
-Page fault	& 18.7 ms	& 81.3 ms 	& 100 ms	& 8 ms\\ \hline \hline
-
-
-
-
-
-
-
-
-
-
-
+Page fault	& 18.7 ms	& 81.3 ms 	& 100 ms	& 8 ms\\ \hline
 
 
 
 \end{tabular}
 \end{center}
+\caption{Summary table: RAM operations}
+
+\end{table}
 
 
 
 
 
 
-\caption{Summary table}
+
+
+\begin{table}[h]
+\begin{center}
+\begin{tabular}{| l | r | r | r | r |} \hline
+Operation 			& Hardware cost 	& Software cost 	& Prediction	& Measured \\ \hline
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+% contention
+
+16MB Local Random		& ?		& ?       & ?        & 0.022  ms/block \\ \hline
+32MB Local Random		& ?		& ?       & ?        & 2.157  ms/block \\ \hline
+64MB Local Random		& ?		& ?       & ?        & 1.357  ms/block \\ \hline
+128MB Local Random 		& ?		& ?       & ?        & 8.980  ms/block \\ \hline
+256MB Local Random		& ?		& ?       & ?        & 9.962  ms/block \\ \hline
+512MB Local Random		& ?		& ?       & ?        & 10.361  ms/block \\ \hline
+1024MB Local Random		& ?		& ?       & ?        & 10.488  ms/block \\ \hline
+2048MB Local Random		& ?		& ?       & ?        & 10.788  ms/block \\ \hline\hline
+
+16MB Local Sequential		& ?		& ?       & ?        & 0.070   ms/block \\ \hline
+32MB Local Sequential		& ?		& ?       & ?        & 0.717   ms/block \\ \hline
+64MB Local Sequential		& ?		& ?       & ?        & 0.439   ms/block \\ \hline
+128MB Local Sequential 	& ?		& ?       & ?        & 6.876   ms/block \\ \hline
+256MB Local Sequential	& ?		& ?       & ?        & 7.717   ms/block \\ \hline
+512MB Local Sequential	& ?		& ?       & ?        & 8.687   ms/block \\ \hline
+1024MB Local Sequential	& ?		& ?       & ?        & 8.721   ms/block \\ \hline
+2048MB Local Sequential	& ?		& ?       & ?        & 8.826   ms/block \\ \hline\hline
+
+16MB Remote Random		& ?		& ?       & ?        & 0.026   ms/block \\ \hline
+32MB Remote Random		& ?		& ?       & ?        & 0.025   ms/block \\ \hline
+64MB Remote Random		& ?		& ?       & ?        & 0.026   ms/block \\ \hline
+128MB Remote Random 		& ?		& ?       & ?        & 0.028   ms/block \\ \hline
+256MB Remote Random		& ?		& ?       & ?        & 0.027   ms/block \\ \hline
+512MB Remote Random		& ?		& ?       & ?        & 15.401   ms/block \\ \hline
+1024MB Remote Random		& ?		& ?       & ?        & 58.903   ms/block \\ \hline\hline
+
+16MB Remote Sequential	& ?		& ?       & ?        & 0.029    ms/block \\ \hline
+32MB Remote Sequential	& ?		& ?       & ?        & 0.020    ms/block \\ \hline
+64MB Remote Sequential	& ?		& ?       & ?        & 0.019    ms/block \\ \hline
+128MB Remote Sequential 	& ?		& ?       & ?        & 0.020    ms/block \\ \hline
+256MB Remote Sequential	& ?		& ?       & ?        & 0.019    ms/block \\ \hline
+512MB Remote Sequential	& ?		& ?       & ?        & 4.919    ms/block \\ \hline
+1024MB Remote Sequential	& ?		& ?       & ?        & 8.725    ms/block \\ \hline\hline 
+
+
+
+% Contention
+
+
+1 process		& ?		& ?       & ?        & 8.942    ms/block \\ \hline
+2 processes	& ?		& ?       & ?        & 2.664    ms/block \\ \hline
+4 processes	& ?		& ?       & ?        & 23.693    ms/block \\ \hline
+8 processes	& ?		& ?       & ?        & 64.129    ms/block \\ \hline
+16 processes	& ?		& ?       & ?        & 121.170    ms/block \\ \hline
+32 processes	& ?		& ?       & ?        & 221.781    ms/block \\ \hline
+
+\end{tabular}
+\end{center}
+
+\caption{Summary table: File system}
 
 \end{table}
 
